update pages and script

--- a/site-template/healdi/contact.html
+++ b/site-template/healdi/contact.html
@@ -54,9 +54,9 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-lg-6 info">
-                    <p>
-                        !Global update on Coronavirus disease <a href="#">(COVID-19)</a> Pandemic
-                    </p>
+                    <!--                    <p>-->
+                    <!--                        !Global update on Coronavirus disease <a href="#">(COVID-19)</a> Pandemic-->
+                    <!--                    </p>-->
                 </div>
                 <div class="col-lg-6 text-right item-flex">
                     <div class="info">
@@ -102,17 +102,17 @@
         <!-- Start Navigation -->
         <nav class="navbar navbar-default navbar-sticky bootsnav">
 
-            <div class="container">
+            <div class="container-full">
 
                 <!-- Start Atribute Navigation -->
-                <div class="attr-nav extra-color">
+                <div class="attr-nav">
                     <ul>
                         <li class="contact">
-                            <i class="fas fa-stethoscope"></i> 
-                            <p>Liên hệ <strong>098 4199 945</strong></p>
+                            <i class="fas fa-stethoscope"></i>
+                            <p>Liên hệ ngay<strong>0984 199 945</strong></p>
                         </li>
                     </ul>
-                </div>        
+                </div>
                 <!-- End Atribute Navigation -->
 
                 <!-- Start Header Navigation -->
@@ -128,9 +128,9 @@
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
-                    <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
+                    <ul class="nav navbar-nav navbar-center" data-in="#" data-out="#">
                         <li>
-                            <a href="index-2.html" class="dropdown-toggle" data-toggle="dropdown" >Trang chủ</a>
+                            <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" >Trang chủ</a>
                             <!--                            <ul class="dropdown-menu">-->
                             <!--                                <li><a href="index-1.html">Home Version One</a></li>-->
                             <!--                                <li><a href="index-2.html">Home Version Two</a></li>-->
@@ -148,40 +148,35 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Departments</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="departments.html">Department Version One</a></li>
-                                <li><a href="departments-2.html">Department Version Two</a></li>
-                                <li><a href="departments-3.html">Department Version Three</a></li>
-                                <li><a href="departments-4.html">Department Version Four</a></li>
-                                <li><a href="department-single.html">Department Single</a></li>
-                            </ul>
+                            <a href="departments-3.html"   >Dịch Vụ</a>
+                            <!--                            <ul class="dropdown-menu">-->
+                            <!--                                <li><a href="departments-3.html"></a></li>-->
+                            <!--                            </ul>-->
                         </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Doctors</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="doctors.html">Doctors Version One</a></li>
-                                <li><a href="doctors-2.html">Doctors Version Two</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="blog-standard.html">Blog Standard</a></li>
-                                <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>
-                                <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>
-                                <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>
-                                <li><a href="blog-single.html">Blog Single</a></li>
-                                <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>
-                            </ul>
-                        </li>
+                        <!--                        <li class="dropdown">-->
+                        <!--                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Doctors</a>-->
+                        <!--                            <ul class="dropdown-menu">-->
+                        <!--                                <li><a href="doctors.html">Doctors Version One</a></li>-->
+                        <!--                                <li><a href="doctors-2.html">Doctors Version Two</a></li>-->
+                        <!--                            </ul>-->
+                        <!--                        </li>-->
+                        <!--                        <li class="dropdown">-->
+                        <!--                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>-->
+                        <!--                            <ul class="dropdown-menu">-->
+                        <!--                                <li><a href="blog-standard.html">Blog Standard</a></li>-->
+                        <!--                                <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>-->
+                        <!--                                <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>-->
+                        <!--                                <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>-->
+                        <!--                                <li><a href="blog-single.html">Blog Single</a></li>-->
+                        <!--                                <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>-->
+                        <!--                            </ul>-->
+                        <!--                        </li>-->
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="contact.html">Liên hệ</a>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div>
-
         </nav>
         <!-- End Navigation -->
 
@@ -197,10 +192,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <h1>Contact Us</h1>
+                    <h1>Liên lạc với chúng tôi</h1>
                     <ul class="breadcrumb">
-                        <li><a href="#"><i class="fas fa-home"></i> Trang chủ</a></li>
-                        <li><a href="#">Pages</a></li>
+                        <li><a href="index.html"><i class="fas fa-home"></i> Trang chủ</a></li>
+                        <li><a href="departments-3.html">Dịch vụ</a></li>
                         <li class="active">Liên hệ</li>
                     </ul>
                 </div>
@@ -295,8 +290,7 @@
                         <div class="f-item about">
                             <img src="assets/img/logo-light.png" alt="Logo">
                             <p>
-                                Required honoured trifling eat pleasure man relation. Assurance yet bed was improving furniture man. Distrusts delighted
-                            </p>
+                                Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn !                             </p>
                             <div class="address">
                                 <ul>
                                     <li>
@@ -324,54 +318,51 @@
 
                     <div class="single-item col-lg-2 col-md-6 item">
                         <div class="f-item link">
-                            <h4 class="widget-title">Department</h4>
+                            <h4 class="widget-title">Các bệnh điều trị</h4>
                             <ul>
                                 <li>
-                                    <a href="#">Medecine & Health</a>
+                                    <a href="#">Thoái hoá cột sống</a>
                                 </li>
                                 <li>
-                                    <a href="#">Dental Care</a>
+                                    <a href="#">Thoát vị đĩa đệm</a>
                                 </li>
                                 <li>
-                                    <a href="#">Eye Treatment</a>
+                                    <a href="#">Vẹo cột sống</a>
                                 </li>
                                 <li>
-                                    <a href="#">Children Chare</a>
+                                    <a href="#">Đau thần kinh toạ</a>
                                 </li>
                                 <li>
-                                    <a href="#">Traumatology</a>
-                                </li>
-                                <li>
-                                    <a href="#">X-ray</a>
+                                    <a href="#">Hội chứng cơ hình lê</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
 
                     <div class="single-item col-lg-2 col-md-6 item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Usefull Links</h4>
-                            <ul>
-                                <li>
-                                    <a href="#">Ambulance</a>
-                                </li>
-                                <li>
-                                    <a href="#">Emergency</a>
-                                </li>
-                                <li>
-                                    <a href="#">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="#">Project</a>
-                                </li>
-                                <li>
-                                    <a href="#">About Us</a>
-                                </li>
-                                <li>
-                                    <a href="#">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
+                        <!--                        <div class="f-item link">-->
+                        <!--                            <h4 class="widget-title">Usefull Links</h4>-->
+                        <!--                            <ul>-->
+                        <!--                                <li>-->
+                        <!--                                    <a href="#">Ambulance</a>-->
+                        <!--                                </li>-->
+                        <!--                                <li>-->
+                        <!--                                    <a href="#">Emergency</a>-->
+                        <!--                                </li>-->
+                        <!--                                <li>-->
+                        <!--                                    <a href="#">Blog</a>-->
+                        <!--                                </li>-->
+                        <!--                                <li>-->
+                        <!--                                    <a href="#">Project</a>-->
+                        <!--                                </li>-->
+                        <!--                                <li>-->
+                        <!--                                    <a href="#">About Us</a>-->
+                        <!--                                </li>-->
+                        <!--                                <li>-->
+                        <!--                                    <a href="#">Contact</a>-->
+                        <!--                                </li>-->
+                        <!--                            </ul>-->
+                        <!--                        </div>-->
                     </div>
 
                     <div class="single-item col-lg-4 col-md-6 item">
@@ -404,13 +395,13 @@
                     <div class="col-lg-6 text-right social">
                         <ul>
                             <li>
-                                <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
+                                <a href="https://www.facebook.com/chirocare.152"><i class="fab fa-facebook-f"></i> Facebook</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fab fa-youtube"></i> Youtube</a>
+                                <a href="https://maps.app.goo.gl/ddR8xuJnxVvz9QZi7"><i class="fab fa-google"></i> Google Maps</a>
                             </li>
                         </ul>
                     </div>
