update photos and contents

--- a/site-template/healdi/about-us.html
+++ b/site-template/healdi/about-us.html
@@ -57,12 +57,13 @@
                     <!--                    <p>-->
                     <!--                        !Global update on Coronavirus disease <a href="#">(COVID-19)</a> Pandemic-->
                     <!--                    </p>-->
+
                 </div>
                 <div class="col-lg-6 text-right item-flex">
                     <div class="info">
                         <ul>
                             <li>
-                                <a href="#">Đặt lịch</a>
+                                <a href="departments-3.html">Đặt lịch</a>
                             </li>
                             <!--                            <li>-->
                             <!--                                <a href="#">WebMail</a>-->
@@ -77,7 +78,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://maps.app.goo.gl/ddR8xuJnxVvz9QZi7">
+                                <a href="https://maps.app.goo.gl/NDWGmcr1vnmqNtM9A">
                                     <i class="fab fa-google"></i>
                                 </a>
                             </li>
@@ -110,6 +111,7 @@
                         <li class="contact">
                             <i class="fas fa-stethoscope"></i>
                             <p>Liên hệ ngay<strong>0984 199 945</strong></p>
+
                         </li>
                     </ul>
                 </div>
@@ -131,6 +133,7 @@
                     <ul class="nav navbar-nav navbar-center" data-in="#" data-out="#">
                         <li>
                             <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" >Trang chủ</a>
+
                             <!--                            <ul class="dropdown-menu">-->
                             <!--                                <li><a href="index-1.html">Home Version One</a></li>-->
                             <!--                                <li><a href="index-2.html">Home Version Two</a></li>-->
@@ -160,17 +163,7 @@
                         <!--                                <li><a href="doctors-2.html">Doctors Version Two</a></li>-->
                         <!--                            </ul>-->
                         <!--                        </li>-->
-                        <!--                        <li class="dropdown">-->
-                        <!--                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>-->
-                        <!--                            <ul class="dropdown-menu">-->
-                        <!--                                <li><a href="blog-standard.html">Blog Standard</a></li>-->
-                        <!--                                <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>-->
-                        <!--                                <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>-->
-                        <!--                                <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>-->
-                        <!--                                <li><a href="blog-single.html">Blog Single</a></li>-->
-                        <!--                                <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>-->
-                        <!--                            </ul>-->
-                        <!--                        </li>-->
+
                         <li>
                             <a href="contact.html">Liên hệ</a>
                         </li>
@@ -210,7 +203,7 @@
 
          <!-- Shape -->
         <div class="shape-left-top shape">
-            <img src="assets/img/shape/1.png" alt="Shape">
+            <img src="assets/img/chiro/DSC07143.jpg" alt="Shape">
         </div>
         <!-- End Shape -->
 
@@ -219,7 +212,7 @@
 
                 <div class="col-lg-6 thumb">
                     <div class="thumb-box">
-                        <img src="assets/img/about/2.jpg" alt="Thumb">
+                        <img src="assets/img/chiro/DSC07127.jpg" alt="Thumb">
                         <div class="intro-video">
                             <div class="video">
                                 <a href="https://www.youtube.com/watch?v=5vY-D42NFP4" class="popup-youtube relative theme video-play-button item-center">
@@ -237,10 +230,10 @@
                 </div>
 
                 <div class="col-lg-6 info">
-                    <h5>Has been working since 2000</h5>
+                    <h5>Chiro Care</h5>
                     <h2>Chuyên nghiệp<strong> - Tận Tâm - </strong>Hiện đại - <strong>Giá cả hợp lý</strong></h2>
                     <p>
-                        Pursuit chamber as elderly amongst on. Distant however warrant farther to of. My justice wishing prudent waiting in be. Who decisively attachment has dispatched. Fruit defer in party me built under first. Forbade him but savings sending ham general.
+                        Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn!                             </p>
                     </p>
                     <ul>
                         <li>
@@ -630,7 +623,7 @@
                         <div class="f-item about">
                             <img src="assets/img/logo-light.png" alt="Logo">
                             <p>
-                                Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn !                             </p>
+                                Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn!                             </p>
                             <div class="address">
                                 <ul>
                                     <li>
