--- a/site-template/healdi/contact.html
+++ b/site-template/healdi/contact.html
@@ -57,12 +57,13 @@
                     <!--                    <p>-->
                     <!--                        !Global update on Coronavirus disease <a href="#">(COVID-19)</a> Pandemic-->
                     <!--                    </p>-->
+
                 </div>
                 <div class="col-lg-6 text-right item-flex">
                     <div class="info">
                         <ul>
                             <li>
-                                <a href="#">Đặt lịch</a>
+                                <a href="departments-3.html">Đặt lịch</a>
                             </li>
                             <!--                            <li>-->
                             <!--                                <a href="#">WebMail</a>-->
@@ -77,7 +78,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://maps.app.goo.gl/ddR8xuJnxVvz9QZi7">
+                                <a href="https://maps.app.goo.gl/NDWGmcr1vnmqNtM9A">
                                     <i class="fab fa-google"></i>
                                 </a>
                             </li>
@@ -92,6 +93,7 @@
             </div>
         </div>
     </div>
+    <!-- End Header Top -->
     <!-- End Header Top -->
 
 
@@ -110,6 +112,7 @@
                         <li class="contact">
                             <i class="fas fa-stethoscope"></i>
                             <p>Liên hệ ngay<strong>0984 199 945</strong></p>
+
                         </li>
                     </ul>
                 </div>
@@ -131,6 +134,7 @@
                     <ul class="nav navbar-nav navbar-center" data-in="#" data-out="#">
                         <li>
                             <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" >Trang chủ</a>
+
                             <!--                            <ul class="dropdown-menu">-->
                             <!--                                <li><a href="index-1.html">Home Version One</a></li>-->
                             <!--                                <li><a href="index-2.html">Home Version Two</a></li>-->
@@ -160,17 +164,7 @@
                         <!--                                <li><a href="doctors-2.html">Doctors Version Two</a></li>-->
                         <!--                            </ul>-->
                         <!--                        </li>-->
-                        <!--                        <li class="dropdown">-->
-                        <!--                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>-->
-                        <!--                            <ul class="dropdown-menu">-->
-                        <!--                                <li><a href="blog-standard.html">Blog Standard</a></li>-->
-                        <!--                                <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>-->
-                        <!--                                <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>-->
-                        <!--                                <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>-->
-                        <!--                                <li><a href="blog-single.html">Blog Single</a></li>-->
-                        <!--                                <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>-->
-                        <!--                            </ul>-->
-                        <!--                        </li>-->
+
                         <li>
                             <a href="contact.html">Liên hệ</a>
                         </li>
@@ -187,7 +181,7 @@
     ============================================= -->
     <div class="breadcrumb-area bg-gradient text-center">
         <!-- Fixed BG -->
-        <div class="fixed-bg" style="background-image: url(assets/img/shape/9.png);"></div>
+        <div class="fixed-bg" style="background-image: url(assets/img/chiro/DSC07121.jpg)"></div>
         <!-- Fixed BG -->
         <div class="container">
             <div class="row">
@@ -211,7 +205,7 @@
             <div class="contact-items">
                 <div class="row">
 
-                    <div class="col-lg-7 wow address-box fadeInUp bg-cover" style="background-image: url(assets/img/contact/1.jpg);">
+                    <div class="col-lg-7 wow address-box fadeInUp bg-cover" style="background-image: url(assets/img/chiro/DSC07126.jpg);">
                         <div class="address-info">
                             <ul>
                                 <li>
@@ -276,7 +270,7 @@
     ============================================= -->
     <div class="maps-area">
         <div class="google-maps">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.7240704970222!2d106.63634397552539!3d10.832415589319794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752979bba3dd35%3A0xf16d4f3341157ca0!2zMTUyIE5ndXnhu4VuIFTGsCBHaeG6o24sIFBoxrDhu51uZyAxMiwgR8OyIFbhuqVwLCBUaMOgbmggcGjhu5EgSOG7kyBDaMOtIE1pbmgsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1710061757015!5m2!1svi!2s" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2013100.804872266!2d104.46414338032487!3d9.779813137687357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175293b86cb5827%3A0xccc7cde4890fefa5!2sChiro%20Care!5e0!3m2!1svi!2s!4v1710240234828!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
     </div>
     <!-- End Google Maps -->
 
@@ -290,7 +284,7 @@
                         <div class="f-item about">
                             <img src="assets/img/logo-light.png" alt="Logo">
                             <p>
-                                Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn !                             </p>
+                                Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn!                             </p>
                             <div class="address">
                                 <ul>
                                     <li>
