--- a/site-template/healdi/departments-3.html
+++ b/site-template/healdi/departments-3.html
@@ -183,6 +183,7 @@
     </header>
     <!-- End Header -->
 
+
     <!-- Start Breadcrumb 
     ============================================= -->
     <div class="breadcrumb-area bg-gradient text-center">
@@ -207,6 +208,103 @@
     <!-- Start Services 
     ============================================= -->
     <div class="department-area icon-only bg-gray carousel-shadow default-padding bottom-less">
+        <div class="consultation-area default-padding-bottom">
+            <div class="container">
+                <div class="row align-center">
+                    <div class="col-lg-7 process">
+                        <h2>
+                            Bạn bị đau cổ - vai - gáy ? <br> Liên hệ với chúng tôi ngay
+                        </h2>
+                        <p>
+                            Với đội ngũ bác sĩ giàu kinh nghiệm và tân tâm. <strong>Chiro Care</strong> sẽ luôn đưa ra phương pháp trị liệu phù hợp với bạn.
+                        </p>
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 single-item">
+                                <div class="item">
+                                    <i class="flaticon-calendar-1"></i>
+                                    <h5>Đặt trước lịch</h5>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 single-item">
+                                <div class="item">
+                                    <i class="flaticon-doctor"></i>
+                                    <h5>Chọn dịch vụ</h5>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 single-item">
+                                <div class="item">
+                                    <i class="flaticon-heartbeat-1"></i>
+                                    <h5>Xác nhận thông tin</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 form">
+                        <div class="appoinment-box text-center wow fadeInRight">
+                            <div class="heading">
+                                <h4>Đặt lịch khám</h4>
+                            </div>
+                            <form action="#">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <input class="form-control" id="name" name="name" placeholder="Họ và Tên" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <input class="form-control" id="phone" name="phone" placeholder="Số điện thoại" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <select>
+                                                <option value="1">Nam</option>
+                                                <option value="2">Nữ</option>
+                                                <option value="3">Khác</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <select>
+                                                <option value="1">Thoái hoá cột sống</option>
+                                                <option value="2">Thoát vị đĩa đệm</option>
+                                                <option value="4">Đau thần kinh toạ</option>
+                                                <option value="5">Hội chứng cơ hình lê</option>
+                                                <option value="5">Khác</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <input class="form-control" id="note" name="note" placeholder="Thêm mô tả" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input class="form-control" id="date" type="date" name="date" placeholder="Ngày khám" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input class="form-control" id="time" name="time" type="time" placeholder="Thời gian" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <button type="submit" name="submit" id="submit">
+                                            Đặt lịch ngay
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr/>
         <div class="container">
             <div class="item-box text-center">
                 <div class="row">
@@ -329,133 +427,38 @@
         <div class="container">
             <div class="fun-fact-items bg-gradient text-light text-center">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 item">
+                    <div class="col-lg-4 col-md-6 item">
                         <div class="fun-fact">
-                            <div class="timer" data-to="230" data-speed="5000"></div>
-                            <span class="medium">Satisfied Patients</span>
+                            <div class="timer" data-to="100" data-speed="2000"></div>
+                            <span class="medium">Khách hàng hài lòng</span>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 item">
+                    <div class="col-lg-4 col -md-6 item">
                         <div class="fun-fact">
-                            <div class="timer" data-to="89" data-speed="5000"></div>
-                            <span class="medium">Regular Doctors</span>
+                            <div class="timer" data-to="50" data-speed="2000"></div>
+                            <span class="medium">Phản hồi hài lòng</span>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 item">
+                    <!--                    <div class="col-lg-3 col-md-6 item">-->
+                    <!--                        <div class="fun-fact">-->
+                    <!--                            <div class="timer" data-to="50" data-speed="2000"></div>-->
+                    <!--                            <span class="medium">Departments</span>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                    <div class="col-lg-4 col-md-6 item">
                         <div class="fun-fact">
-                            <div class="timer" data-to="50" data-speed="5000"></div>
-                            <span class="medium">Departments</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 item">
-                        <div class="fun-fact">
-                            <div class="timer" data-to="2348" data-speed="5000"></div>
-                            <span class="medium">Servant</span>
+                            <div class="timer" data-to="15" data-speed="2000"></div>
+                            <span class="medium">Dịch vụ</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- End Fun Factor Area -->
+        <!-- End Fun Factor Area -->
 
     <!-- Start Consultation 
     ============================================= -->
-    <div class="consultation-area default-padding-bottom">
-        <div class="container">
-            <div class="row align-center">
-                <div class="col-lg-7 process">
-                    <h2>
-                        Bạn bị đau cổ - vai - gáy ? <br> Liên hệ với chúng tôi ngay 
-                    </h2>
-                    <p>
-                    Với đội ngũ bác sĩ giàu kinh nghiệm và tân tâm. <strong>Chiro Care</strong> sẽ luôn đưa ra phương pháp trị liệu phù hợp với bạn.
-                    </p>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 single-item">
-                            <div class="item">
-                                <i class="flaticon-calendar-1"></i>
-                                <h5>Đặt trước lịch</h5>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 single-item">
-                            <div class="item">
-                                <i class="flaticon-doctor"></i> 
-                                <h5>Chọn dịch vụ</h5>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4 single-item">
-                            <div class="item">
-                                <i class="flaticon-heartbeat-1"></i>
-                                <h5>Xác nhận thông tin</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5 form">
-                    <div class="appoinment-box text-center wow fadeInRight">
-                        <div class="heading">
-                            <h4>Đặt lịch khám</h4>
-                        </div>
-                        <form action="#">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <input class="form-control" id="name" name="name" placeholder="Họ và Tên" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <input class="form-control" id="phone" name="phone" placeholder="Số điện thoại" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <select>
-                                            <option value="1">Nam</option>
-                                            <option value="2">Nữ</option>
-                                            <option value="3">Khác</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <select>
-                                            <option value="1">Thoái hoá cột sống</option>
-                                            <option value="2">Thoát vị đĩa đệm</option>
-                                            <option value="4">Đau thần kinh toạ</option>
-                                            <option value="5">Hội chứng cơ hình lê</option>
-                                            <option value="5">Khác</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <input class="form-control" id="note" name="note" placeholder="Thêm mô tả" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input class="form-control" id="date" type="date" name="date" placeholder="Ngày khám" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input class="form-control" id="time" name="time" type="time" placeholder="Thời gian" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <button type="submit" name="submit" id="submit">
-                                        Đặt lịch ngay
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- End Consultation -->
 
     <!-- Start Footer 
@@ -468,7 +471,7 @@
                         <div class="f-item about">
                             <img src="assets/img/logo-light.png" alt="Logo">
                             <p>
-                                Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn !                             </p>
+                                Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn!                             </p>
                             <div class="address">
                                 <ul>
                                     <li>
