add Chiro Logo, fix Home button not working

--- a/site-template/healdi/departments-3.html
+++ b/site-template/healdi/departments-3.html
@@ -121,7 +121,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="assets/img/chirologo3.png" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -129,14 +129,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-center" data-in="#" data-out="#">
-                        <li>
-                            <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" >Trang chủ</a>
+                        <li class="dropdown">
+                            <a href="index.html"   >Trang chủ</a>
                             <!--                            <ul class="dropdown-menu">-->
-                            <!--                                <li><a href="index-1.html">Home Version One</a></li>-->
-                            <!--                                <li><a href="index-2.html">Home Version Two</a></li>-->
-                            <!--                                <li><a href="index-3.html">Home Version Three</a></li>-->
-                            <!--                                <li><a href="index-4.html">Home Version Four</a></li>-->
-                            <!--                                <li><a href="index-5.html">Home Version Five <span class="badge">New</span></a></li>-->
+                            <!--                                <li><a href="departments-3.html"></a></li>-->
                             <!--                            </ul>-->
                         </li>
                         <li class="dropdown">
@@ -469,7 +465,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="assets/img/chirologo3.png" alt="Logo">
                             <p>
                                 Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn!                             </p>
                             <div class="address">
