--- a/site-template/healdi/index.html
+++ b/site-template/healdi/index.html
@@ -121,7 +121,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="assets/img/chirologo3.png" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -1000,7 +1000,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="assets/img/chirologo3.png" alt="Logo">
                             <p>
                                 Hãy để đội ngũ bác sĩ chuyên nghiệp và giàu kinh nghiệm của chúng tôi chăm sóc cho cột sống của bạn!                             </p>
 
